# crunchy

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  test_mac.yml
dsp_core/: Cargo.toml
resources/styles/: main.css
src/: algorithm.rs  dsp.rs  editor.rs  lib.rs  main.rs
src/algorithm/: mdct.rs
src/editor/: image_macros.rs  style.rs  widgets.rs
src/editor/widgets/: knob.rs
xtask/: Cargo.toml
xtask/src/: main.rs
