[package]
name = "crunchy-plugin"
version = "0.2.2"
edition = "2021"

authors = ["Garneek"]
description = "DCT clip/bitcrush"
license = "GNU General Public License v3.0"

[features]
default = []
test = ["plugin-utils/test"]

[dependencies]
nih_plug = { git = "https://github.com/Ardura/nih-plug.git", rev = "32e4e96d0d9820f28bcfd22a6cde4c05b5c71a51", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/Ardura/nih-plug.git", rev = "32e4e96d0d9820f28bcfd22a6cde4c05b5c71a51" }

image = {version = "0.25.5", features = ["png"]}
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }

plugin-utils = { git = "https://github.com/Garneek/plugin-utils.git", branch = "main"}

[workspace]
members = [
  "xtask",
]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "main"
path = "src/main.rs"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3
